<?xml version="1.0"?>
<package format="2">
  <name>path_compare_viz</name>
  <version>0.0.0</version>
  <description>
    This repository tries to provide an easy way for comparing estimated 
    and ground-truth paths taken by a robot in simulation.

    It listens to `base_link_estimate` and `base_link_real` and publishes
    nav_msgs/Path on both of their trajectories to display in rviz.

  </description>

  <maintainer email="dunkel@student.tugraz.at">Joachim Dunkel</maintainer>

  <license>MIT License</license>

  <author email="dunkel@student.tugraz.at">Joachim Dunkel</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

</package>